sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: ')' expected but ',' found.
  for(i <- 1, getNombreValeurs()-1){
            ^AlgInsertionSort:3: error: ';' expected but ')' found.
  for(i <- 1, getNombreValeurs()-1){
                                  ^